[package]
name = "molasses"
version = "0.1.0"
license = "Apache-2.0"
authors = ["Michael Rosenberg <micro@fastmail.com>"]
edition = "2018"
description = "A Rust implementation of the Message Layer Security group messaging protocol"
keywords = ["mls", "crypto", "protocol", "tls"]

[dependencies]
byteorder = "1.3"
digest = "0.8"
doc-comment = "0.1"
ed25519-dalek = { version = "1.0.0-pre.1" }
hkdf = "0.7"
hmac = "0.7"
rand = "0.6"
rand_core = "0.3"
#ring = "0.14"
ring = { git = "https://github.com/rozbb/ring.git", branch = "master" }
serde = { version = "1.0", features = ["derive"] }
x25519-dalek = "0.4"

[dev-dependencies]
hex = "0.3"
quickcheck = "0.8"
quickcheck_macros = "0.8"
serde = { version = "1.0", features = ["derive"] }
