[package]
name = "molasses"
version = "0.1.0"
license = "Apache-2.0"
authors = ["Michael Rosenberg <micro@fastmail.com>"]
edition = "2018"
description = "A Rust implementation of the Message Layer Security group messaging protocol"
keywords = ["mls", "crypto", "protocol", "tls"]

[dependencies]
byteorder = "1.3"
clear_on_drop = "0.2"
digest = "0.8"
doc-comment = "0.1"
ed25519-dalek = { version = "1.0.0-pre.1" }
rand = "0.6"
# I'm using my own fork of ring because I'm waiting on this PR to go through:
# https://github.com/briansmith/ring/pull/788
#ring = "0.14"
ring = { git = "https://github.com/rozbb/ring.git", branch = "master" }
serde = { version = "1.0", features = ["derive"] }
subtle = "2.0"
x25519-dalek = "0.5"

[dev-dependencies]
crossbeam = "0.7"
hex = "0.3"
quickcheck = "0.8"
quickcheck_macros = "0.8"
rot13 = "0.1"
serde = { version = "1.0", features = ["derive"] }
